objects/User_Persona_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Apply_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do not edit manually. This field is used to control the permission scheduler</inlineHelpText>
        <label>Apply Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Schedule_ID__c</fullName>
        <inlineHelpText>This is the Apex Job ID for the scheduled permission revokal</inlineHelpText>
        <label>End Schedule ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Persona</label>
        <referenceTo>Persona__c</referenceTo>
        <relationshipLabel>User Persona Assignments</relationshipLabel>
        <relationshipName>User_Persona_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Schedule_ID__c</fullName>
        <inlineHelpText>This is the Apex Job ID for the scheduled permission assignment</inlineHelpText>
        <label>Start Schedule ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <label>Status Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Permissions Assigned</fullName>
                </value>
                <value>
                    <fullName>Permissions Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                    <default>true</default>
                    <label>Permanent</label>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Persona Assignments</relationshipLabel>
        <relationshipName>User_Persona_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Persona Assignment</label>
    <nameField>
        <displayFormat>UPA-{000000000}</displayFormat>
        <label>User Persona Assignment Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Persona Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Permanent_no_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>and (
 ISPICKVAL( Type__c ,&quot;Permanent&quot;),
  or (
    not( ISNULL( End_Time__c ) ),
    not( ISNULL( Start_Time__c  ) )
  )
)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Cannot  specify End and Start time for Permanent permissions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_End_date_illogicalness</fullName>
        <active>true</active>
        <description>If current user sets start date less than the end date, then the rule&apos;s error message will appear on the top of the page.</description>
        <errorConditionFormula>IF( Start_Time__c &gt;  End_Time__c ,true, false)</errorConditionFormula>
        <errorMessage>Start Time cannot be after the End Time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_issue</fullName>
        <active>true</active>
        <description>If either start date or end date is set less than current datetime, the rule&apos;s error message will appear on the top of the page.</description>
        <errorConditionFormula>If( OR(Start_Time__c &lt;  NOW() , End_Time__c &lt; NOW()),true,false )</errorConditionFormula>
        <errorMessage>Start Time or End Time cannot be in the past. Please add a couple of minutes to related field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Temporary_with_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>and (
 ISPICKVAL( Type__c ,&quot;Temporary&quot;),
  or (
   ISNULL( End_Time__c ),
   ISNULL( Start_Time__c  )
  )
)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Specify End and Start time for Temporary permissions.</errorMessage>
    </validationRules>
</CustomObject>